[gd_scene load_steps=56 format=2]

[ext_resource path="res://scripts/npcManager.gd" type="Script" id=2]
[ext_resource path="res://assets/npc/img/npcCommon.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/font/marietta-seven.ttf" type="DynamicFontData" id=5]

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 32, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 64, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 96, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 64, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 96, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 64, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 96, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 32, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 64, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 96, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 64, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 96, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 0, 448, 32, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 32, 448, 32, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 64, 448, 32, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 96, 448, 32, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 96, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 32, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 64, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 96, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 64, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 96, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 64, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 96, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 32, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 64, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 96, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 64, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 96, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "CRY",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": false,
"name": "EXPLAIN",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "DEFEAT",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "QUEST",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "REWARD",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": false,
"name": "VICTORY",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "PANIC",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 10.3301
height = 24.2323

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 119.034, 18.827 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 24.0017, 18.827 )

[sub_resource type="DynamicFont" id=17]
size = 4
outline_size = 1
outline_color = Color( 0.341176, 0.27451, 0.00784314, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=18]
resource_name = "BLINK_DIALOG"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("labelStateFix:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "STATUS_HIDE"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("statusIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=20]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("statusIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="npcCommon" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.803032, -11.3071 )
frames = SubResource( 13 )
animation = "DEFEAT"
frame = 3
playing = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 14 )

[node name="area2DVision" type="Area2D" parent="."]
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2DVision"]
shape = SubResource( 15 )

[node name="area2DInteraction" type="Area2D" parent="."]
position = Vector2( 1.66855, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2DInteraction"]
position = Vector2( 0.529755, 0 )
shape = SubResource( 16 )

[node name="labelStateFix" type="Label" parent="."]
margin_left = -30.1265
margin_top = -44.993
margin_right = 29.8735
margin_bottom = -30.993
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 17 )
text = "fix"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statusIcon" type="TextureRect" parent="."]
margin_left = -7.87962
margin_top = -50.9458
margin_right = 8.12038
margin_bottom = -34.9458
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effectPlayer" type="AnimationPlayer" parent="."]
anims/BLINK_DIALOG = SubResource( 18 )
anims/STATUS_HIDE = SubResource( 19 )
anims/STATUS_SHOW = SubResource( 20 )
[connection signal="animation_finished" from="animatedSprite" to="." method="_on_animatedSprite_animation_finished"]
[connection signal="body_entered" from="area2DVision" to="." method="_on_area2DVision_body_entered"]
[connection signal="body_entered" from="area2DInteraction" to="." method="_on_area2DInteraction_body_entered"]
